Switched to MedleyDB:
- grouped multitracks into 'drums', 'bass', 'vocals', 'other' categories;
- excluded a number of tracks from the dataset, split the rest into train/test;
- Dataset class adapted to MedleyDB;

--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,18 +11,16 @@
     "import matplotlib.pyplot as plt\n",
     "import librosa\n",
     "import librosa.display\n",
-    "import IPython.display as ipd"
+    "import IPython.display as ipd\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "root_dir = '/media/apelykh/bottomless-pit/datasets/mixing/MedleyDB/Audio'\n",
-    "# song_name = 'TheDistricts_Vermont'\n",
-    "song_name = 'StevenClark_Bounty'"
+    "## Compare groung-truth mixes to raw sums of multitracks "
    ]
   },
   {
@@ -31,38 +29,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mix_path = os.path.join(song_dir, '{}_MIX.wav'.format(song_name))\n",
+    "root_dir = '/media/apelykh/bottomless-pit/datasets/mixing/MedleyDB/Audio'\n",
+    "song_name = 'TheDistricts_Vermont'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GT mix\n",
+    "mix_path = os.path.join(root_dir, song_name, '{}_MIX.wav'.format(song_name))\n",
     "mix, sr = librosa.load(mix_path, sr=44100)\n",
     "\n",
-    "plt.figure(figsize=(14, 5))\n",
     "librosa.display.waveplot(mix)\n",
     "ipd.Audio(mix_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Summing StevenClark_Bounty_STEM_01.wav\n",
-      "Summing StevenClark_Bounty_STEM_02.wav\n",
-      "Summing StevenClark_Bounty_STEM_03.wav\n",
-      "Summing StevenClark_Bounty_STEM_04.wav\n",
-      "Summing StevenClark_Bounty_STEM_05.wav\n",
-      "Summing StevenClark_Bounty_STEM_06.wav\n",
-      "Summing StevenClark_Bounty_STEM_07.wav\n",
-      "Summing StevenClark_Bounty_STEM_08.wav\n",
-      "Summing StevenClark_Bounty_STEM_09.wav\n",
-      "Summing StevenClark_Bounty_STEM_10.wav\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "stems_path = os.path.join(song_dir, '{}_STEMS'.format(song_name))\n",
+    "# summed stem tracks\n",
+    "stems_path = os.path.join(root_dir, song_name, '{}_STEMS'.format(song_name))\n",
     "sum_track = np.zeros_like(mix)\n",
     "\n",
     "for track_name in os.listdir(stems_path):\n",
@@ -70,26 +62,10 @@
     "    track, sr = librosa.load(track_path, sr=44100)\n",
     "\n",
     "    print('Summing {}'.format(track_name))\n",
-    "    sum_track += track"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    sum_track += track\n",
+    "\n",
     "librosa.display.waveplot(sum_track)\n",
     "ipd.Audio(sum_track, rate=sr)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Conclusions:\n",
-    "1. Sum of all track does not produce a 'mixture' track;\n",
-    "2. Gain, EQ?, panning? can be regressed with the model"
    ]
   },
   {
