Code finalized and commented

--- a/medleydb_data_surgery.ipynb
+++ b/medleydb_data_surgery.ipynb
@@ -193,7 +193,7 @@
     "    mix_path = os.path.join(root_dir, song_name, '{}_MIX.wav'.format(song_name))\n",
     "    mix, sr = librosa.load(mix_path, sr=44100)\n",
     "    \n",
-    "    stems_path = os.path.join(root_dir, song_name, '{}_RAW'.format(song_name))\n",
+    "    stems_path = os.path.join(root_dir, song_name, '{}_STEMS'.format(song_name))\n",
     "    sum_track = np.zeros_like(mix)\n",
     "\n",
     "    for track_name in os.listdir(stems_path):\n",
@@ -201,9 +201,8 @@
     "        track, sr = librosa.load(track_path, sr=44100)\n",
     "        sum_track += track\n",
     "    \n",
-    "    sum_track_path = os.path.join(root_dir, song_name, '{}_RAW_SUM.wav'.format(song_name))\n",
-    "    # safety comment against the accidental cell run\n",
-    "#     librosa.output.write_wav(sum_track_path, sum_track, sr=44100, norm=True)"
+    "    sum_track_path = os.path.join(root_dir, song_name, '{}_SUM.wav'.format(song_name))\n",
+    "    librosa.output.write_wav(sum_track_path, sum_track, sr=44100, norm=True)"
    ]
   },
   {
@@ -1273,172 +1272,6 @@
     "sum_stems(song_path, bass_stems, category='bass')\n",
     "sum_stems(song_path, vocal_stems, category='vocals')\n",
     "sum_stems(song_path, other_stems, category='other')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Selecting data for training and testing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exclude = [\n",
-    "    'AmarLal_Rest',\n",
-    "    'AmarLal_SpringDay1',\n",
-    "    'BrandonWebster_DontHearAThing',\n",
-    "    'BrandonWebster_YesSirICanFly',\n",
-    "    'ClaraBerryAndWooldog_TheBadGuys',\n",
-    "    'Debussy_LenfantProdigue',                   # classics\n",
-    "    'EthanHein_1930sSynthAndUprightBass',        # nothing to learn\n",
-    "    'EthanHein_BluesForNofi',                    # nothing to learn\n",
-    "    'EthanHein_GirlOnABridge',                   # nothing to learn\n",
-    "    'EthanHein_HarmonicaFigure',                 # nothing to learn\n",
-    "    'Handel_TornamiAVagheggiar',\n",
-    "    'JoelHelander_Definition',\n",
-    "    'JoelHelander_ExcessiveResistancetoChange',\n",
-    "    'JoelHelander_IntheAtticBedroom',\n",
-    "    'LizNelson_Coldwar',\n",
-    "    'LizNelson_ImComingHome',\n",
-    "    'LizNelson_Rainfall',\n",
-    "    'MatthewEntwistle_AnEveningWithOliver',\n",
-    "    'MatthewEntwistle_FairerHopes',\n",
-    "    'MatthewEntwistle_ImpressionsOfSaturn',\n",
-    "    'MatthewEntwistle_Lontano',\n",
-    "    'MatthewEntwistle_TheArch',\n",
-    "    'MatthewEntwistle_TheFlaxenField',\n",
-    "    'MichaelKropf_AllGoodThings',\n",
-    "    'Mozart_BesterJungling',\n",
-    "    'Mozart_DiesBildnis',\n",
-    "    'MusicDelta_Beethoven',\n",
-    "    'MusicDelta_ChineseChaoZhou',                 # too few stems\n",
-    "    'MusicDelta_ChineseDrama',                    # too few stems\n",
-    "    'MusicDelta_ChineseHenan',                    # too few stems\n",
-    "    'MusicDelta_ChineseJiangNan',                 # too few stems\n",
-    "    'MusicDelta_ChineseXinJing',                  # too few stems\n",
-    "    'MusicDelta_ChineseYaoZu',                    # too few stems\n",
-    "    'MusicDelta_GriegTrolltog',\n",
-    "    'MusicDelta_InTheHalloftheMountainKing',\n",
-    "    'MusicDelta_Pachelbel',\n",
-    "    'MusicDelta_Vivaldi',\n",
-    "    'Phoenix_BrokenPledgeChicagoReel',            # too few stems\n",
-    "    'Phoenix_ColliersDaughter',                   # too few stems\n",
-    "    'Phoenix_ElzicsFarewell',                     # too few stems\n",
-    "    'Phoenix_LarkOnTheStrandDrummondCastle',      # too few stems\n",
-    "    'Phoenix_ScotchMorris',                       # too few stems\n",
-    "    'Phoenix_SeanCaughlinsTheScartaglen',         # too few stems\n",
-    "    'Schubert_Erstarrung',\n",
-    "    'Schumann_Mignon',\n",
-    "    'TablaBreakbeatScience_Animoog',              # nothing to learn\n",
-    "    'TablaBreakbeatScience_CaptainSky',           # too few stems\n",
-    "    'TablaBreakbeatScience_MiloVsMongo',          # too few stems\n",
-    "    'TablaBreakbeatScience_MoodyPlucks',          # too few stems\n",
-    "    'TablaBreakbeatScience_PhaseTransition',      # too few stems\n",
-    "    'TablaBreakbeatScience_RockSteady',           # too few stems\n",
-    "    'TablaBreakbeatScience_Scorpio',              # too few stems\n",
-    "    'TablaBreakbeatScience_Vger',                 # too few stems\n",
-    "    'TablaBreakbeatScience_WhoIsIt',              # nothing to learn\n",
-    "    'Wolf_DieBekherte'\n",
-    "]\n",
-    "\n",
-    "train = [\n",
-    "    'AClassicEducation_NightOwl',\n",
-    "    'AimeeNorwich_Child',\n",
-    "    'AimeeNorwich_Flying',\n",
-    "    'AlexanderRoss_GoodbyeBolero',\n",
-    "    'AlexanderRoss_VelvetCurtain',\n",
-    "    'Auctioneer_OurFutureFaces',\n",
-    "    'AvaLuna_Waterduct',\n",
-    "    'CelestialShore_DieForUs',\n",
-    "    'ClaraBerryAndWooldog_AirTraffic',\n",
-    "    'ClaraBerryAndWooldog_Boys',\n",
-    "    'ClaraBerryAndWooldog_Stella',\n",
-    "    'ClaraBerryAndWooldog_WaltzForMyVictims',\n",
-    "    'Creepoid_OldTree',\n",
-    "    'CroqueMadame_Oil',                 # instrumental\n",
-    "    'CroqueMadame_Pilot',               # instrumental\n",
-    "    'DreamersOfTheGhetto_HeavyLove',\n",
-    "    'FacesOnFilm_WaitingForGa',\n",
-    "    'FamilyBand_Again',\n",
-    "    'Grants_PunchDrunk',                # rap\n",
-    "    'HeladoNegro_MitadDelMundo',\n",
-    "    'HezekiahJones_BorrowedHeart',\n",
-    "    'HopAlong_SisterCities',\n",
-    "    'InvisibleFamiliars_DisturbingWildlife',\n",
-    "    'KarimDouaidy_Hopscotch',           # instrumental\n",
-    "    'KarimDouaidy_Yatora',              # instrumental\n",
-    "    'Lushlife_ToynbeeSuite',\n",
-    "    'MatthewEntwistle_DontYouEver',\n",
-    "    'NightPanther_Fire',\n",
-    "    'PortStWillow_StayEven',\n",
-    "    'PurlingHiss_Lolita',\n",
-    "    'SecretMountains_HighHorse',\n",
-    "    'Snowmine_Curfews',\n",
-    "    'StevenClark_Bounty',\n",
-    "    'StrandOfOaks_Spacestation',\n",
-    "    'SweetLights_YouLetMeDown',\n",
-    "    'TheDistricts_Vermont'\n",
-    "]\n",
-    "\n",
-    "test = [\n",
-    "    'BigTroubles_Phantom',              # !\n",
-    "    'ChrisJacoby_BoothShotLincoln',     # instrumental\n",
-    "    'ChrisJacoby_PigsFoot',             # instrumental\n",
-    "    'Meaxic_TakeAStep',\n",
-    "    'Meaxic_YouListen',\n",
-    "    'MusicDelta_80sRock',\n",
-    "    'MusicDelta_Beatles',\n",
-    "    'MusicDelta_BebopJazz',\n",
-    "    'MusicDelta_Britpop',\n",
-    "    'MusicDelta_CoolJazz',              # instrumental\n",
-    "    'MusicDelta_Country1',\n",
-    "    'MusicDelta_Country2',\n",
-    "    'MusicDelta_Disco',\n",
-    "    'MusicDelta_FreeJazz',              # instrumental\n",
-    "    'MusicDelta_FunkJazz',              # instrumental\n",
-    "    'MusicDelta_FusionJazz',            # instrumental\n",
-    "    'MusicDelta_Gospel',\n",
-    "    'MusicDelta_Grunge',\n",
-    "    'MusicDelta_Hendrix',\n",
-    "    'MusicDelta_LatinJazz',             # instrumental\n",
-    "    'MusicDelta_ModalJazz',             # instrumental\n",
-    "    'MusicDelta_Punk',\n",
-    "    'MusicDelta_Reggae',\n",
-    "    'MusicDelta_Rock',\n",
-    "    'MusicDelta_Rockabilly',\n",
-    "    'MusicDelta_Shadows',               # instrumental\n",
-    "    'MusicDelta_SpeedMetal',            # instrumental\n",
-    "    'MusicDelta_SwingJazz',             # instrumental\n",
-    "    'MusicDelta_Zeppelin',              # instrumental\n",
-    "    'TheScarletBrand_LesFleursDuMal',   # terrible GT mix\n",
-    "    'TheSoSoGlos_Emergency'             # !\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "55 excluded\n",
-      "36 train\n",
-      "31 test\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('{} excluded'.format(len(exclude)))\n",
-    "print('{} train'.format(len(train)))\n",
-    "print('{} test'.format(len(test)))"
    ]
   },
   {
