Switching from coursework setup to the master's project one. Models and structure refined

--- a/data/medleydb_data_surgery.ipynb
+++ b/data/medleydb_data_surgery.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/apelykh/.virtualenvs/pytorch-audio/lib/python3.6/site-packages/librosa/util/decorators.py:9: NumbaDeprecationWarning: An import was requested from a module that has moved location.\n",
+      "Import of 'jit' requested from: 'numba.decorators', please update to use 'numba.core.decorators' or pin to Numba version 0.48.0. This alias will not be present in Numba version 0.50.0.\n",
+      "  from numba.decorators import jit as optional_jit\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import yaml\n",
@@ -20,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1272,6 +1282,67 @@
     "sum_stems(song_path, bass_stems, category='bass')\n",
     "sum_stems(song_path, vocal_stems, category='vocals')\n",
     "sum_stems(song_path, other_stems, category='other')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Checking tracks origin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AClassicEducation_NightOwl\n",
+      "Auctioneer_OurFutureFaces\n",
+      "AvaLuna_Waterduct\n",
+      "BigTroubles_Phantom\n",
+      "CelestialShore_DieForUs\n",
+      "Lushlife_ToynbeeSuite\n",
+      "NightPanther_Fire\n",
+      "PortStWillow_StayEven\n",
+      "PurlingHiss_Lolita\n",
+      "SecretMountains_HighHorse\n",
+      "Snowmine_Curfews\n",
+      "TheSoSoGlos_Emergency\n",
+      "Creepoid_OldTree\n",
+      "DreamersOfTheGhetto_HeavyLove\n",
+      "FacesOnFilm_WaitingForGa\n",
+      "FamilyBand_Again\n",
+      "Grants_PunchDrunk\n",
+      "HeladoNegro_MitadDelMundo\n",
+      "HezekiahJones_BorrowedHeart\n",
+      "HopAlong_SisterCities\n",
+      "InvisibleFamiliars_DisturbingWildlife\n",
+      "StevenClark_Bounty\n",
+      "StrandOfOaks_Spacestation\n",
+      "SweetLights_YouLetMeDown\n",
+      "TheDistricts_Vermont\n",
+      "25 total\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_songs = 0\n",
+    "\n",
+    "for song_name in os.listdir(root_dir):\n",
+    "    info_file = os.path.join(root_dir, song_name, '{}_METADATA.yaml'.format(song_name))\n",
+    "    \n",
+    "    with open(info_file) as f:\n",
+    "        info = yaml.full_load(f)\n",
+    "\n",
+    "        if info['origin'] == 'Weathervane Music':\n",
+    "            print(song_name)\n",
+    "            num_songs += 1\n",
+    "            \n",
+    "print(str(num_songs) + ' total')"
    ]
   },
   {
