--- a/runner.ipynb
+++ b/runner.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/apelykh/.virtualenvs/pytorch-audio/lib/python3.6/site-packages/librosa/util/decorators.py:9: NumbaDeprecationWarning: An import was requested from a module that has moved location.\n",
+      "Import of 'jit' requested from: 'numba.decorators', please update to use 'numba.core.decorators' or pin to Numba version 0.48.0. This alias will not be present in Numba version 0.50.0.\n",
+      "  from numba.decorators import jit as optional_jit\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import torch\n",
@@ -40,15 +50,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: change the path!\n",
     "base_dir = '/media/apelykh/bottomless-pit/datasets/mixing/MedleyDB/Audio/'\n",
-    "song_name = 'PurlingHiss_Lolita'\n",
+    "song_name = 'Creepoid_OldTree'\n",
     "\n",
-    "# TODO: sum online?\n",
     "# track is the sum of preprocessed stems\n",
     "track_path = os.path.join(base_dir, song_name, '{}_SUM.wav'.format(song_name))\n",
     "audio, sr = sf.read(track_path, always_2d=True)\n",
@@ -282,29 +290,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from model_regression import MixingModel\n",
-    "from inference_utils import mix_song\n",
+    "from model_tdd import MixingModelTDD\n",
+    "from inference_utils import mix_song, mix_song_ifft\n",
     "from dataset import MultitrackAudioDataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "weights = './weights/mixmodel2_1s_bs1023_0030_90.679.pt'\n",
+    "weights = './weights/mixmodel_tdd_1s_0009_0.1616.pt'\n",
+    "\n",
     "# length of song chunks (in seconds), used for model training\n",
     "chunk_length = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MixingModelTDD(\n",
+       "  (conv1_1): Conv2d(4, 16, kernel_size=(5, 5), stride=(1, 1))\n",
+       "  (conv1_2): Conv2d(16, 16, kernel_size=(5, 5), stride=(1, 1))\n",
+       "  (f_pool1): MaxPool2d(kernel_size=(2, 2), stride=(2, 2), padding=0, dilation=1, ceil_mode=False)\n",
+       "  (bn1): BatchNorm2d(16, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (conv2_1): Conv2d(16, 26, kernel_size=(5, 3), stride=(1, 1))\n",
+       "  (conv2_2): Conv2d(26, 24, kernel_size=(5, 3), stride=(1, 1))\n",
+       "  (f_pool2): MaxPool2d(kernel_size=(2, 1), stride=(2, 1), padding=0, dilation=1, ceil_mode=False)\n",
+       "  (bn2): BatchNorm2d(24, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (conv3_1): Conv2d(24, 48, kernel_size=(3, 3), stride=(1, 1))\n",
+       "  (conv3_2): Conv2d(48, 48, kernel_size=(3, 3), stride=(1, 1))\n",
+       "  (f_pool3): MaxPool2d(kernel_size=(2, 1), stride=(2, 1), padding=0, dilation=1, ceil_mode=False)\n",
+       "  (bn3): BatchNorm2d(48, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (tdd1): Conv2d(48, 1, kernel_size=(123, 1), stride=(1, 1))\n",
+       "  (tdd2): Conv2d(48, 1, kernel_size=(123, 1), stride=(1, 1))\n",
+       "  (tdd3): Conv2d(48, 1, kernel_size=(123, 1), stride=(1, 1))\n",
+       "  (tdd4): Conv2d(48, 1, kernel_size=(123, 1), stride=(1, 1))\n",
+       ")"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = MixingModelTDD().to(device)\n",
+    "model.load_state_dict(torch.load(weights, map_location=device))\n",
+    "\n",
+    "# set the model in the eval() mode - influences BatchNorm layer,\n",
+    "# but not gradients\n",
+    "model.eval()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,25 +368,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 32,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading bass\n",
-      "Loading drums\n",
-      "Loading vocals\n",
-      "Loading other\n",
-      "Loading mix\n"
-     ]
-    }
-   ],
    "source": [
-    "# TODO: introduce flexibility: load splits\n",
-    "\n",
+    "---\n",
+    "## Experiment A:\n",
+    "```original stems --> mixing```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load original multitracks \n",
     "loaded_tracks = {}\n",
     "\n",
     "for track in d.get_tracklist():\n",
@@ -345,59 +392,14 @@
     "        track_path = os.path.join(base_dir, song_name, '{}_STEMS_JOINED'.format(song_name),\n",
     "                                  '{}_STEM_{}.wav'.format(song_name, track.upper()))\n",
     "\n",
-    "    print('Loading {}'.format(track))\n",
     "    loaded_tracks[track], _ = librosa.load(track_path, sr=44100)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 38,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "MixingModel(\n",
-       "  (conv1_1): Conv2d(4, 8, kernel_size=(5, 3), stride=(1, 1))\n",
-       "  (conv1_2): Conv2d(8, 12, kernel_size=(5, 3), stride=(1, 1))\n",
-       "  (f_pool1): MaxPool2d(kernel_size=(2, 2), stride=(2, 2), padding=0, dilation=1, ceil_mode=False)\n",
-       "  (bn1): BatchNorm2d(12, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "  (conv2_1): Conv2d(12, 16, kernel_size=(4, 3), stride=(1, 1))\n",
-       "  (conv2_2): Conv2d(16, 24, kernel_size=(4, 3), stride=(1, 1))\n",
-       "  (f_pool2): MaxPool2d(kernel_size=(2, 1), stride=(2, 1), padding=0, dilation=1, ceil_mode=False)\n",
-       "  (bn2): BatchNorm2d(24, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "  (conv3_1): Conv2d(24, 36, kernel_size=(3, 3), stride=(1, 1))\n",
-       "  (conv3_2): Conv2d(36, 48, kernel_size=(3, 3), stride=(1, 1))\n",
-       "  (f_pool3): MaxPool2d(kernel_size=(2, 1), stride=(2, 1), padding=0, dilation=1, ceil_mode=False)\n",
-       "  (bn3): BatchNorm2d(48, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "  (conv4_1): Conv2d(48, 64, kernel_size=(3, 3), stride=(1, 1))\n",
-       "  (conv4_2): Conv2d(64, 96, kernel_size=(3, 3), stride=(1, 1))\n",
-       "  (bn4): BatchNorm2d(96, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "  (conv5): Conv2d(96, 128, kernel_size=(3, 3), stride=(1, 1))\n",
-       "  (bn5): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "  (conv_head1): Conv2d(128, 1, kernel_size=(1, 1), stride=(1, 1))\n",
-       "  (fc_head1): Linear(in_features=30, out_features=1, bias=True)\n",
-       "  (conv_head2): Conv2d(128, 1, kernel_size=(1, 1), stride=(1, 1))\n",
-       "  (fc_head2): Linear(in_features=30, out_features=1, bias=True)\n",
-       "  (conv_head3): Conv2d(128, 1, kernel_size=(1, 1), stride=(1, 1))\n",
-       "  (fc_head3): Linear(in_features=30, out_features=1, bias=True)\n",
-       "  (conv_head4): Conv2d(128, 1, kernel_size=(1, 1), stride=(1, 1))\n",
-       "  (fc_head4): Linear(in_features=30, out_features=1, bias=True)\n",
-       ")"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "model = MixingModel().to(device)\n",
-    "# model.load_state_dict(torch.load(weights, map_location=device))\n",
-    "\n",
-    "# set the model in the eval() mode - influences BatchNorm layer,\n",
-    "# but not gradients\n",
-    "model.eval()"
+    "### Unmixed sum of multitracks"
    ]
   },
   {
@@ -406,9 +408,95 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save memory during forward pass\n",
+    "sum_audio = np.zeros_like(loaded_tracks['drums'])\n",
+    "\n",
+    "for track in d.get_tracklist():\n",
+    "    if track != 'mix':\n",
+    "        sum_audio += loaded_tracks['{}'.format(track)]\n",
+    "\n",
+    "librosa.display.waveplot(sum_audio)\n",
+    "ipd.Audio(sum_audio, rate=44100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ground-truth mix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ground truth mix\n",
+    "librosa.display.waveplot(loaded_tracks['mix'])\n",
+    "ipd.Audio(loaded_tracks['mix'], rate=44100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mixing using a scalar model\n",
     "with torch.no_grad():\n",
-    "    mixed_song = mix_song(d, model, loaded_tracks, chunk_length=1)\n",
+    "    mixed_song = mix_song_ifft(d, model)\n",
+    "\n",
+    "librosa.display.waveplot(mixed_song)\n",
+    "ipd.Audio(mixed_song, rate=44032)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mixing using a vector model\n",
+    "with torch.no_grad():\n",
+    "    mixed_song = mix_song(d, model_vector, loaded_tracks, chunk_length=1)\n",
+    "\n",
+    "librosa.display.waveplot(mixed_song)\n",
+    "ipd.Audio(mixed_song, rate=44100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Experiment B:\n",
+    "```open-unmix separation --> mixing```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load separated stems by Open-unmix\n",
+    "loaded_tracks = {}\n",
+    "results_path = os.path.join('output', 'open-unmix', song_name)\n",
+    "\n",
+    "for track in ['bass', 'drums', 'other', 'vocals']:\n",
+    "    track_path = os.path.join(results_path, '{}.wav'.format(track,))\n",
+    "    loaded_tracks[track], _ = librosa.load(track_path, sr=44100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mixing using a scalar model\n",
+    "with torch.no_grad():\n",
+    "    mixed_song = mix_song(d, model_scalar, loaded_tracks, chunk_length=1)\n",
     "\n",
     "librosa.display.waveplot(mixed_song)\n",
     "ipd.Audio(mixed_song, rate=44100)"
@@ -420,16 +508,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# summed tracks, no mix\n",
-    "sum_audio = np.zeros_like(loaded_tracks['mix'])\n",
+    "# mixing using a vector model\n",
+    "with torch.no_grad():\n",
+    "    mixed_song = mix_song(d, model_vector, loaded_tracks, chunk_length=1)\n",
     "\n",
-    "for track in d.get_tracklist():\n",
-    "    if track != 'mix':\n",
-    "        print('Summing {}'.format(track))\n",
-    "        sum_audio += loaded_tracks['{}'.format(track)]\n",
+    "librosa.display.waveplot(mixed_song)\n",
+    "ipd.Audio(mixed_song, rate=44100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Experiment C:\n",
+    "```spleeter separation --> mixing```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load separated stems by Spleeter\n",
+    "loaded_tracks = {}\n",
+    "results_path = os.path.join('output', 'spleeter', song_name)\n",
     "\n",
-    "librosa.display.waveplot(sum_audio)\n",
-    "ipd.Audio(sum_audio, rate=44100)"
+    "for track in ['bass', 'drums', 'other', 'vocals']:\n",
+    "    track_path = os.path.join(results_path, '{}.wav'.format(track,))\n",
+    "    loaded_tracks[track], _ = librosa.load(track_path, sr=44100)\n",
+    "\n",
+    "# add original mix\n",
+    "loaded_tracks['mix'] = librosa.load(os.path.join(base_dir, song_name, '{}_MIX.wav'.format(song_name)), sr=44100)"
    ]
   },
   {
@@ -438,9 +549,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ground truth\n",
-    "librosa.display.waveplot(loaded_tracks['mix'])\n",
-    "ipd.Audio(loaded_tracks['mix'], rate=44100)"
+    "# mixing using a scalar model\n",
+    "with torch.no_grad():\n",
+    "    mixed_song = mix_song(d, model_scalar, loaded_tracks, chunk_length=1)\n",
+    "\n",
+    "librosa.display.waveplot(mixed_song)\n",
+    "ipd.Audio(mixed_song, rate=44100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mixing using a vector model\n",
+    "with torch.no_grad():\n",
+    "    mixed_song = mix_song(d, model_vector, loaded_tracks, chunk_length=1)\n",
+    "\n",
+    "librosa.display.waveplot(mixed_song)\n",
+    "ipd.Audio(mixed_song, rate=44100)"
    ]
   },
   {
