Using stereo tracks

--- a/data/medleydb_data_surgery.ipynb
+++ b/data/medleydb_data_surgery.ipynb
@@ -4,17 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/apelykh/.virtualenvs/pytorch-audio/lib/python3.6/site-packages/librosa/util/decorators.py:9: NumbaDeprecationWarning: An import was requested from a module that has moved location.\n",
-      "Import of 'jit' requested from: 'numba.decorators', please update to use 'numba.core.decorators' or pin to Numba version 0.48.0. This alias will not be present in Numba version 0.50.0.\n",
-      "  from numba.decorators import jit as optional_jit\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import yaml\n",
@@ -1293,39 +1283,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AClassicEducation_NightOwl\n",
-      "Auctioneer_OurFutureFaces\n",
-      "AvaLuna_Waterduct\n",
-      "BigTroubles_Phantom\n",
-      "CelestialShore_DieForUs\n",
-      "Lushlife_ToynbeeSuite\n",
-      "NightPanther_Fire\n",
-      "PortStWillow_StayEven\n",
-      "PurlingHiss_Lolita\n",
-      "SecretMountains_HighHorse\n",
-      "Snowmine_Curfews\n",
-      "TheSoSoGlos_Emergency\n",
-      "Creepoid_OldTree\n",
-      "DreamersOfTheGhetto_HeavyLove\n",
-      "FacesOnFilm_WaitingForGa\n",
-      "FamilyBand_Again\n",
-      "Grants_PunchDrunk\n",
-      "HeladoNegro_MitadDelMundo\n",
-      "HezekiahJones_BorrowedHeart\n",
-      "HopAlong_SisterCities\n",
-      "InvisibleFamiliars_DisturbingWildlife\n",
-      "StevenClark_Bounty\n",
-      "StrandOfOaks_Spacestation\n",
-      "SweetLights_YouLetMeDown\n",
-      "TheDistricts_Vermont\n",
-      "25 total\n"
+      "AimeeNorwich_Child\n",
+      "AimeeNorwich_Flying\n",
+      "AlexanderRoss_GoodbyeBolero\n",
+      "AlexanderRoss_VelvetCurtain\n",
+      "AmarLal_Rest\n",
+      "AmarLal_SpringDay1\n",
+      "MusicDelta_ChineseDrama\n",
+      "MusicDelta_ChineseHenan\n",
+      "MusicDelta_ChineseJiangNan\n",
+      "MusicDelta_ChineseXinJing\n",
+      "MusicDelta_ChineseYaoZu\n",
+      "MusicDelta_CoolJazz\n",
+      "MusicDelta_Country1\n",
+      "MusicDelta_Country2\n",
+      "MusicDelta_Disco\n",
+      "MusicDelta_FreeJazz\n",
+      "MusicDelta_FunkJazz\n",
+      "MusicDelta_FusionJazz\n",
+      "MusicDelta_Gospel\n",
+      "MusicDelta_GriegTrolltog\n",
+      "MusicDelta_Grunge\n",
+      "MusicDelta_Hendrix\n",
+      "MusicDelta_InTheHalloftheMountainKing\n",
+      "MusicDelta_LatinJazz\n",
+      "MusicDelta_ModalJazz\n",
+      "MusicDelta_Pachelbel\n",
+      "MusicDelta_Punk\n",
+      "MusicDelta_Reggae\n",
+      "MusicDelta_Rock\n",
+      "MusicDelta_Rockabilly\n",
+      "MusicDelta_Shadows\n",
+      "KarimDouaidy_Yatora\n",
+      "LizNelson_Coldwar\n",
+      "LizNelson_ImComingHome\n",
+      "LizNelson_Rainfall\n",
+      "MatthewEntwistle_AnEveningWithOliver\n",
+      "MatthewEntwistle_DontYouEver\n",
+      "MatthewEntwistle_FairerHopes\n",
+      "MatthewEntwistle_ImpressionsOfSaturn\n",
+      "MatthewEntwistle_Lontano\n",
+      "MatthewEntwistle_TheArch\n",
+      "MatthewEntwistle_TheFlaxenField\n",
+      "Meaxic_TakeAStep\n",
+      "Meaxic_YouListen\n",
+      "MichaelKropf_AllGoodThings\n",
+      "Mozart_BesterJungling\n",
+      "Mozart_DiesBildnis\n",
+      "MusicDelta_80sRock\n",
+      "MusicDelta_Beatles\n",
+      "MusicDelta_BebopJazz\n",
+      "MusicDelta_Beethoven\n",
+      "MusicDelta_Britpop\n",
+      "MusicDelta_SwingJazz\n",
+      "MusicDelta_Vivaldi\n",
+      "MusicDelta_Zeppelin\n",
+      "Phoenix_BrokenPledgeChicagoReel\n",
+      "Phoenix_ColliersDaughter\n",
+      "Phoenix_ElzicsFarewell\n",
+      "Phoenix_LarkOnTheStrandDrummondCastle\n",
+      "Phoenix_ScotchMorris\n",
+      "Phoenix_SeanCaughlinsTheScartaglen\n",
+      "Schubert_Erstarrung\n",
+      "Schumann_Mignon\n",
+      "ClaraBerryAndWooldog_WaltzForMyVictims\n",
+      "KarimDouaidy_Hopscotch\n",
+      "MusicDelta_ChineseChaoZhou\n",
+      "MusicDelta_SpeedMetal\n",
+      "CroqueMadame_Oil\n",
+      "CroqueMadame_Pilot\n",
+      "Debussy_LenfantProdigue\n",
+      "EthanHein_1930sSynthAndUprightBass\n",
+      "EthanHein_BluesForNofi\n",
+      "EthanHein_GirlOnABridge\n",
+      "EthanHein_HarmonicaFigure\n",
+      "Handel_TornamiAVagheggiar\n",
+      "JoelHelander_Definition\n",
+      "JoelHelander_ExcessiveResistancetoChange\n",
+      "JoelHelander_IntheAtticBedroom\n",
+      "TablaBreakbeatScience_Animoog\n",
+      "TablaBreakbeatScience_CaptainSky\n",
+      "TablaBreakbeatScience_MiloVsMongo\n",
+      "TablaBreakbeatScience_MoodyPlucks\n",
+      "TablaBreakbeatScience_PhaseTransition\n",
+      "TablaBreakbeatScience_RockSteady\n",
+      "TablaBreakbeatScience_Scorpio\n",
+      "TablaBreakbeatScience_Vger\n",
+      "TablaBreakbeatScience_WhoIsIt\n",
+      "TheScarletBrand_LesFleursDuMal\n",
+      "Wolf_DieBekherte\n",
+      "BrandonWebster_DontHearAThing\n",
+      "BrandonWebster_YesSirICanFly\n",
+      "ChrisJacoby_BoothShotLincoln\n",
+      "ChrisJacoby_PigsFoot\n",
+      "ClaraBerryAndWooldog_AirTraffic\n",
+      "ClaraBerryAndWooldog_Boys\n",
+      "ClaraBerryAndWooldog_Stella\n",
+      "ClaraBerryAndWooldog_TheBadGuys\n",
+      "97 total\n"
      ]
     }
    ],
@@ -1335,10 +1397,13 @@
     "for song_name in os.listdir(root_dir):\n",
     "    info_file = os.path.join(root_dir, song_name, '{}_METADATA.yaml'.format(song_name))\n",
     "    \n",
+    "    if not os.path.exists(info_file):\n",
+    "        continue\n",
+    "    \n",
     "    with open(info_file) as f:\n",
     "        info = yaml.full_load(f)\n",
     "\n",
-    "        if info['origin'] == 'Weathervane Music':\n",
+    "        if info['origin'] != 'Weathervane Music':\n",
     "            print(song_name)\n",
     "            num_songs += 1\n",
     "            \n",
@@ -1369,7 +1434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
