Objective evaluation through relative loudness measurement implemented

--- a/data/medleydb_data_surgery.ipynb
+++ b/data/medleydb_data_surgery.ipynb
@@ -1283,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1296,35 +1296,6 @@
       "AlexanderRoss_VelvetCurtain\n",
       "AmarLal_Rest\n",
       "AmarLal_SpringDay1\n",
-      "MusicDelta_ChineseDrama\n",
-      "MusicDelta_ChineseHenan\n",
-      "MusicDelta_ChineseJiangNan\n",
-      "MusicDelta_ChineseXinJing\n",
-      "MusicDelta_ChineseYaoZu\n",
-      "MusicDelta_CoolJazz\n",
-      "MusicDelta_Country1\n",
-      "MusicDelta_Country2\n",
-      "MusicDelta_Disco\n",
-      "MusicDelta_FreeJazz\n",
-      "MusicDelta_FunkJazz\n",
-      "MusicDelta_FusionJazz\n",
-      "MusicDelta_Gospel\n",
-      "MusicDelta_GriegTrolltog\n",
-      "MusicDelta_Grunge\n",
-      "MusicDelta_Hendrix\n",
-      "MusicDelta_InTheHalloftheMountainKing\n",
-      "MusicDelta_LatinJazz\n",
-      "MusicDelta_ModalJazz\n",
-      "MusicDelta_Pachelbel\n",
-      "MusicDelta_Punk\n",
-      "MusicDelta_Reggae\n",
-      "MusicDelta_Rock\n",
-      "MusicDelta_Rockabilly\n",
-      "MusicDelta_Shadows\n",
-      "KarimDouaidy_Yatora\n",
-      "LizNelson_Coldwar\n",
-      "LizNelson_ImComingHome\n",
-      "LizNelson_Rainfall\n",
       "MatthewEntwistle_AnEveningWithOliver\n",
       "MatthewEntwistle_DontYouEver\n",
       "MatthewEntwistle_FairerHopes\n",
@@ -1334,65 +1305,29 @@
       "MatthewEntwistle_TheFlaxenField\n",
       "Meaxic_TakeAStep\n",
       "Meaxic_YouListen\n",
-      "MichaelKropf_AllGoodThings\n",
-      "Mozart_BesterJungling\n",
-      "Mozart_DiesBildnis\n",
-      "MusicDelta_80sRock\n",
-      "MusicDelta_Beatles\n",
-      "MusicDelta_BebopJazz\n",
-      "MusicDelta_Beethoven\n",
-      "MusicDelta_Britpop\n",
-      "MusicDelta_SwingJazz\n",
-      "MusicDelta_Vivaldi\n",
-      "MusicDelta_Zeppelin\n",
-      "Phoenix_BrokenPledgeChicagoReel\n",
-      "Phoenix_ColliersDaughter\n",
-      "Phoenix_ElzicsFarewell\n",
-      "Phoenix_LarkOnTheStrandDrummondCastle\n",
-      "Phoenix_ScotchMorris\n",
-      "Phoenix_SeanCaughlinsTheScartaglen\n",
-      "Schubert_Erstarrung\n",
-      "Schumann_Mignon\n",
       "ClaraBerryAndWooldog_WaltzForMyVictims\n",
-      "KarimDouaidy_Hopscotch\n",
-      "MusicDelta_ChineseChaoZhou\n",
-      "MusicDelta_SpeedMetal\n",
       "CroqueMadame_Oil\n",
       "CroqueMadame_Pilot\n",
-      "Debussy_LenfantProdigue\n",
       "EthanHein_1930sSynthAndUprightBass\n",
       "EthanHein_BluesForNofi\n",
       "EthanHein_GirlOnABridge\n",
       "EthanHein_HarmonicaFigure\n",
-      "Handel_TornamiAVagheggiar\n",
       "JoelHelander_Definition\n",
       "JoelHelander_ExcessiveResistancetoChange\n",
       "JoelHelander_IntheAtticBedroom\n",
-      "TablaBreakbeatScience_Animoog\n",
-      "TablaBreakbeatScience_CaptainSky\n",
-      "TablaBreakbeatScience_MiloVsMongo\n",
-      "TablaBreakbeatScience_MoodyPlucks\n",
-      "TablaBreakbeatScience_PhaseTransition\n",
-      "TablaBreakbeatScience_RockSteady\n",
-      "TablaBreakbeatScience_Scorpio\n",
-      "TablaBreakbeatScience_Vger\n",
-      "TablaBreakbeatScience_WhoIsIt\n",
       "TheScarletBrand_LesFleursDuMal\n",
-      "Wolf_DieBekherte\n",
-      "BrandonWebster_DontHearAThing\n",
-      "BrandonWebster_YesSirICanFly\n",
-      "ChrisJacoby_BoothShotLincoln\n",
-      "ChrisJacoby_PigsFoot\n",
       "ClaraBerryAndWooldog_AirTraffic\n",
       "ClaraBerryAndWooldog_Boys\n",
       "ClaraBerryAndWooldog_Stella\n",
       "ClaraBerryAndWooldog_TheBadGuys\n",
-      "97 total\n"
+      "30 total\n"
      ]
     }
    ],
    "source": [
     "num_songs = 0\n",
+    "\n",
+    "origins = ['Weathervane Music', 'Independent Artist', 'Dolan Studio', 'Music Delta']\n",
     "\n",
     "for song_name in os.listdir(root_dir):\n",
     "    info_file = os.path.join(root_dir, song_name, '{}_METADATA.yaml'.format(song_name))\n",
@@ -1403,7 +1338,7 @@
     "    with open(info_file) as f:\n",
     "        info = yaml.full_load(f)\n",
     "\n",
-    "        if info['origin'] != 'Weathervane Music':\n",
+    "        if info['origin'] == 'Independent Artist':\n",
     "            print(song_name)\n",
     "            num_songs += 1\n",
     "            \n",
